late night folly

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -13,5 +13,6 @@ $screen-smt-max: $screen-smt - 1;
 $screen-md: 1024px;
 $screen-lg: 1280px;
 
+$section-color: #d1d9e5;
 $section-color-odd: #fff;
 $section-color-even: #d1d9e5;
