--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -1,3 +1,5 @@
+$switcher-color: #000;
+
 .main-header {
   @include jagged($section-color);
   background-image: linear-gradient($section-color-odd, $section-color);
@@ -51,7 +53,7 @@
     font-style: italic;
     font-weight: bold;
     line-height: 1em;
-    margin: 0 0 1rem;
+    margin: 0;
     padding: 10px;
     position: relative;
 
@@ -66,36 +68,38 @@
   }
 
   h2 {
-    font-size: 1.8rem;
-    margin: 0;
+    font-size: 1.9rem;
+    margin: 1rem 0 0;
     position: relative;
+    white-space: nowrap;
     z-index: 5;
 
     @include md {
-      font-size: 2.45rem;
+      font-size: 2.5rem;
     }
 
     @include lg {
-      font-size: 3rem;
+      font-size: 3.1rem;
     }
   }
 
   .menu {
     display: flex;
-    list-style-type: none;
+    flex-flow: row nowrap;
     justify-content: space-between;
+    list-style-type: none;
     margin: 10px 0 0;
     padding: 0;
-    pointer-events: none;
     position: relative;
 
-    >li {
-      text-align: center;
+    > li {
+      flex-basis: auto;
+      line-height: 1;
     }
 
     a {
       color: #000;
-      pointer-events: all;
+      font-size: 1.3rem;
       position: relative;
       text-decoration: none;
 
@@ -117,30 +121,91 @@
   }
 
   .language {
-    display: inline-block;
-    font: 0;
+    font-size: 0;
     line-height: 0;
+    margin-top: 2rem;
     text-align: right;
+  }
 
-    a {
+  .switchbox {
+    label {
       background-color: #fff;
-      border: 1px solid #aaa;
-      color: #aaa;
-      font-size: 1.2rem;
-      line-height: 1;
-      padding: 1px 4px;
-      text-decoration: none;
+      border: 1px solid $switcher-color;
+      border-radius: 3px;
+      cursor: pointer;
+      display: inline-block;
+      height: 22px;
+      position: relative;
+      width: 70px;
 
-      &.active {
-        background-color: #aaa;
-        color: #fff;
+      span.on,
+      span.off {
+        font-size: 12px;
+        font-weight: 600;
+        height: 16px;
+        line-height: 1.4;
+        padding: 2px 0;
+        position: absolute;
+        text-align: center;
+        top: 0;
+        width: 50%;
       }
+
+      span.on {
+        border-bottom-right-radius: 2px;
+        border-top-right-radius: 2px;
+        color: #fff;
+        left: 0;
+        right: inherit;
+      }
+
+      span.off {
+        border-bottom-right-radius: 2px;
+        border-top-right-radius: 2px;
+        color: $switcher-color;
+        right: 0;
+      }
+    }
+
+    input {
+      display: none;
+
+      &:checked {
+        + label {
+
+          span.on {
+            color: $switcher-color;
+          }
+
+          span.off {
+            color: #fff;
+          }
+
+          &:before {
+            left: 50%;
+          }
+        }
+
+      }
+
+      + label:before {
+        background: $switcher-color;
+        content: '';
+        display: block;
+        height: 20px;
+        left: 0;
+        position: absolute;
+        top: 0;
+        transition: 0.3s;
+        width: 50%; /* W3C */
+      }
+
     }
   }
 
   .bio {
     margin: 0 auto;
-    padding: 15vh ($grid-gutter-width / 2);
+    padding: 10vh ($grid-gutter-width / 2);
 
     @include xs {
       padding: 12vh $grid-gutter-width;
