--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -2,15 +2,17 @@ $switcher-color: #000;
 
 .main-header {
   @include jagged($section-color);
-  background-image: linear-gradient($section-color-odd, $section-color);
+  background-image: linear-gradient(to bottom, $section-color-odd, $section-color 90%);
   background-repeat: no-repeat;
-  margin: ($grid-gutter-width * 1.3) auto 0;
-  padding-bottom: 20px;
+  height: 94vh;
+  margin: 0 auto;
+  padding-bottom: 2rem;
+  padding-top: 7rem;
   position: relative;
   text-align: center;
 
   @include xs {
-    margin-top: 35px;
+    padding-top: 7rem;
   }
 
   @include sm-only {
@@ -18,30 +20,29 @@ $switcher-color: #000;
   }
 
   @include sm {
-    margin-top: $grid-gutter-width* 1.5;
+    padding-top: 9rem;
   }
 
   @include md {
-    margin-top: $grid-gutter-width * 2;
+    padding-top: 12rem;
   }
 
   @include lg {
-    height: 84vh;
-    margin-top: $grid-gutter-width * 3;
+    padding-top: $grid-gutter-width * 3;
   }
 
   .wrapper {
     display: inline-block;
     position: relative;
-    width: 210px;
+    width: 21rem;
     z-index: 15;
 
     @include md {
-      width: 275px;
+      width: 27.5rem;
     }
 
     @include lg {
-      width: 345px;
+      width: 34.5rem;
     }
   }
 
@@ -54,7 +55,7 @@ $switcher-color: #000;
     font-weight: bold;
     line-height: 1em;
     margin: 0;
-    padding: 10px;
+    padding: 1rem;
     position: relative;
 
     @include md {
@@ -63,13 +64,14 @@ $switcher-color: #000;
 
     @include lg {
       font-size: 5rem;
-      padding: 16px;
+      padding: 1.6rem;
     }
   }
 
   h2 {
+    color: #000;
     font-size: 1.9rem;
-    margin: 1rem 0 0;
+    margin: 0.5rem 0 0;
     position: relative;
     white-space: nowrap;
     z-index: 5;
@@ -79,40 +81,47 @@ $switcher-color: #000;
     }
 
     @include lg {
-      font-size: 3.1rem;
+      font-size: 3.2rem;
     }
   }
 
   .menu {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
     list-style-type: none;
-    margin: 10px 0 0;
+    margin: 1rem 0 0;
     padding: 0;
     position: relative;
 
     > li {
-      flex-basis: auto;
+      display: inline-block;
       line-height: 1;
+      width: percentage(1 / 3);
+
+      @include lg {
+        width: percentage(1 / 4);
+      }
+
+      &:last-of-type {
+        @include md-only {
+          margin-top: 1.5rem;
+          width: 100%;
+        }
+      }
     }
 
     a {
       color: #000;
-      font-size: 1.3rem;
       position: relative;
       text-decoration: none;
-
-      @include lg {
-        font-size: 1.6rem;
-      }
 
       &:before {
         background: $brand-primary;
         bottom: 0;
         content: '';
         display: block;
-        height: 2px;
+        height: 0.2rem;
         left: 0;
         position: absolute;
         width: 100%;
@@ -130,21 +139,21 @@ $switcher-color: #000;
   .switchbox {
     label {
       background-color: #fff;
-      border: 1px solid $switcher-color;
-      border-radius: 3px;
+      border: 0.1rem solid $switcher-color;
+      border-radius: 0.3rem;
       cursor: pointer;
       display: inline-block;
-      height: 22px;
+      height: 2.2rem;
       position: relative;
-      width: 70px;
+      width: 7rem;
 
       span.on,
       span.off {
-        font-size: 12px;
+        font-size: 1.2rem;
         font-weight: 600;
-        height: 16px;
+        height: 1.6rem;
         line-height: 1.4;
-        padding: 2px 0;
+        padding: 0.2rem 0;
         position: absolute;
         text-align: center;
         top: 0;
@@ -152,16 +161,16 @@ $switcher-color: #000;
       }
 
       span.on {
-        border-bottom-right-radius: 2px;
-        border-top-right-radius: 2px;
+        border-bottom-right-radius: 0.2rem;
+        border-top-right-radius: 0.2rem;
         color: #fff;
         left: 0;
         right: inherit;
       }
 
       span.off {
-        border-bottom-right-radius: 2px;
-        border-top-right-radius: 2px;
+        border-bottom-right-radius: 0.2rem;
+        border-top-right-radius: 0.2rem;
         color: $switcher-color;
         right: 0;
       }
@@ -192,7 +201,7 @@ $switcher-color: #000;
         background: $switcher-color;
         content: '';
         display: block;
-        height: 20px;
+        height: 2rem;
         left: 0;
         position: absolute;
         top: 0;
@@ -204,6 +213,7 @@ $switcher-color: #000;
   }
 
   .bio {
+    color: #000;
     margin: 0 auto;
     padding: 10vh ($grid-gutter-width / 2);
 
@@ -212,11 +222,11 @@ $switcher-color: #000;
     }
 
     @include md {
-      max-width: 680px;
+      max-width: 68rem;
     }
 
     @include lg {
-      max-width: 900px;
+      max-width: 90rem;
       padding: 12vh 0;
     }
 
