--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,8 +4,8 @@
 
 @import url('//fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Open+Sans:800');
 
-@import 'components/common';
+@import 'components/layout';
 @import 'components/header';
+@import 'components/loader';
 @import 'components/logos';
 @import 'components/sections';
-@import 'components/loader';
